<resources>
    <string name="app_name">MovieDB_27</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="action_search">Search</string>
    <string name="title_top_rate">Top Rate</string>
    <string name="title_popular">Most Popular</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_up_coming">Up Coming</string>
    <string name="title_genres">Genres</string>
    <string name="title_overview">OverView</string>
    <string name="title_cast">Cast</string>
    <string name="title_trailer">Trailer</string>
    <string name="title_company">Company</string>
    <string name="string_search">Search Movie</string>
</resources>
